added design of area cardview

--- a/app/src/main/res/layout/fragment_my_network.xml
+++ b/app/src/main/res/layout/fragment_my_network.xml
@@ -17,9 +17,10 @@
         android:clickable="true"
         android:focusable="true"
         android:padding="4dp"
-        android:src="@drawable/ic_arrow_back"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
+        />
 
     <!-- Title -->
     <TextView
@@ -66,7 +67,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/light_blue"
+            android:background="#03A9F4"
             android:padding="16dp">
 
             <ImageView
@@ -117,7 +118,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/light_green"
+            android:background="#4CAF50"
             android:padding="16dp">
 
             <ImageView
@@ -169,7 +170,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/light_orange"
+            android:background="#F44336"
             android:padding="16dp">
 
             <ImageView
@@ -220,7 +221,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/light_purple"
+            android:background="#FF9800"
             android:padding="16dp">
 
             <ImageView
