--- a/app/src/main/res/layout/fragment_pending_areas.xml
+++ b/app/src/main/res/layout/fragment_pending_areas.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.fragments.mynetwork.area.AddAreaBottomSheetFragment"
+    tools:context=".view.fragments.mynetwork.area.PendingAreasFragment"
     >
 
     <!-- TODO: Update blank fragment layout -->
